# docs/swagger.json
@@ -1255,21 +1255,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "type": "object",
-                                            "properties": {
-                                                "menus": {
-                                                    "type": "array",
-                                                    "items": {
-                                                        "$ref": "#/definitions/domain.MenuTreeNode"
-                                                    }
-                                                },
-                                                "permissions": {
-                                                    "type": "array",
-                                                    "items": {
-                                                        "type": "string"
-                                                    }
-                                                }
-                                            }
+                                            "$ref": "#/definitions/domain.UserResources"
                                         }
                                     }
                                 }
@@ -3881,8 +3867,8 @@
             "type": "object",
             "required": [
                 "captcha_id",
-                "password",
-                "username"
+                "identifier",
+                "password"
             ],
             "properties": {
                 "captcha_id": {
@@ -3894,10 +3880,10 @@
                 "captcha_y": {
                     "type": "integer"
                 },
-                "password": {
+                "identifier": {
                     "type": "string"
                 },
-                "username": {
+                "password": {
                     "type": "string"
                 }
             }
@@ -4488,6 +4474,32 @@
                 },
                 "refreshToken": {
                     "type": "string"
+                }
+            }
+        },
+        "domain.UserResources": {
+            "type": "object",
+            "properties": {
+                "is_admin": {
+                    "type": "boolean"
+                },
+                "menus": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/domain.MenuTreeNode"
+                    }
+                },
+                "permissions": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "roles": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
                 }
             }
         },
